--- a/app-office/abiword-plugins/ChangeLog
+++ b/app-office/abiword-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/abiword-plugins
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/abiword-plugins/ChangeLog,v 1.27 2007/04/24 13:12:42 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/abiword-plugins/ChangeLog,v 1.28 2007/05/06 04:53:38 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  abiword-plugins-2.4.6.ebuild:
+  ppc stable
 
   24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   abiword-plugins-2.4.6.ebuild:
