--- a/app-office/kmymoney2/ChangeLog
+++ b/app-office/kmymoney2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/kmymoney2
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney2/ChangeLog,v 1.59 2007/04/30 19:06:31 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney2/ChangeLog,v 1.60 2007/05/06 04:54:27 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  kmymoney2-0.8.6.ebuild:
+  ppc stable
 
   30 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   kmymoney2-0.8.6.ebuild:
