--- a/app-text/gocr/ChangeLog
+++ b/app-text/gocr/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/gocr
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gocr/ChangeLog,v 1.39 2007/04/24 14:25:39 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gocr/ChangeLog,v 1.40 2007/05/06 04:56:20 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> gocr-0.43.ebuild:
+  ppc stable
 
   24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> gocr-0.43.ebuild:
   Stable on sparc
