--- a/app-text/mecab/ChangeLog
+++ b/app-text/mecab/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/mecab
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/mecab/ChangeLog,v 1.36 2007/04/20 16:04:39 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/mecab/ChangeLog,v 1.37 2007/05/06 04:56:53 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> mecab-0.93.ebuild:
+  ppc stable
 
   20 Apr 2007; MATSUU Takuto <matsuu@gentoo.org> mecab-0.95.ebuild:
   Added restrict="test". because `make check` failed on amd64.
