--- a/app-text/ocrad/ChangeLog
+++ b/app-text/ocrad/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/ocrad
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/ocrad/ChangeLog,v 1.22 2007/04/24 14:23:52 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ocrad/ChangeLog,v 1.23 2007/05/06 04:57:26 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> ocrad-0.15.ebuild:
+  ppc stable
 
   24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> ocrad-0.15.ebuild:
   Stable on sparc
