--- a/app-text/wpd2sxw/ChangeLog
+++ b/app-text/wpd2sxw/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/wpd2sxw
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/wpd2sxw/ChangeLog,v 1.13 2007/03/26 04:27:25 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/wpd2sxw/ChangeLog,v 1.14 2007/05/06 04:57:59 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  wpd2sxw-0.7.1.ebuild:
+  ppc stable
 
   26 Mar 2007; Jeroen Roovers <jer@gentoo.org> wpd2sxw-0.7.1.ebuild:
   Marked ~hppa too.
