--- a/dev-db/libiodbc/ChangeLog
+++ b/dev-db/libiodbc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/libiodbc
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libiodbc/ChangeLog,v 1.24 2007/04/01 21:31:35 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libiodbc/ChangeLog,v 1.25 2007/05/06 04:58:33 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  libiodbc-3.52.4.ebuild:
+  ppc stable
 
   01 Apr 2007; Jeroen Roovers <jer@gentoo.org> libiodbc-3.52.4.ebuild:
   Stable for HPPA too.
