--- a/dev-embedded/gpsim/ChangeLog
+++ b/dev-embedded/gpsim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-embedded/gpsim
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/gpsim/ChangeLog,v 1.33 2007/02/13 11:51:21 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/gpsim/ChangeLog,v 1.34 2007/05/06 04:59:10 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> gpsim-0.22.0.ebuild:
+  ppc stable
 
   13 Feb 2007; Markus Rothe <corsair@gentoo.org> gpsim-0.21.11-r1.ebuild:
   Stable on ppc64; bug #146422
