--- a/dev-games/ode/ChangeLog
+++ b/dev-games/ode/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/ode
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/ode/ChangeLog,v 1.39 2007/03/26 14:12:59 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/ode/ChangeLog,v 1.40 2007/05/06 04:59:51 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> ode-0.8.ebuild:
+  ppc stable
 
   26 Mar 2007; Raúl Porcel <armin76@gentoo.org> ode-0.8.ebuild:
   ia64 stable wrt bug 146080
