--- a/app-portage/autounmask/ChangeLog
+++ b/app-portage/autounmask/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/autounmask
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/autounmask/ChangeLog,v 1.8 2007/05/02 08:28:53 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/autounmask/ChangeLog,v 1.9 2007/05/06 05:05:51 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  autounmask-0.15.ebuild:
+  ppc stable, bug #177238
 
   02 May 2007; Christian Hartmann <ian@gentoo.org> -autounmask-0.13.ebuild,
   -autounmask-0.14.ebuild:
