--- a/dev-java/ant-nodeps/ChangeLog
+++ b/dev-java/ant-nodeps/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/ant-nodeps
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-nodeps/ChangeLog,v 1.8 2007/05/05 16:42:42 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-nodeps/ChangeLog,v 1.9 2007/05/06 07:40:24 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  ant-nodeps-1.7.0.ebuild:
+  ppc stable
 
   05 May 2007; Andrej Kacian <ticho@gentoo.org> ant-nodeps-1.7.0.ebuild:
   Stable on x86, bug #176856.
