--- a/dev-java/ant-jmf/ChangeLog
+++ b/dev-java/ant-jmf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/ant-jmf
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-jmf/ChangeLog,v 1.7 2007/05/05 16:50:50 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-jmf/ChangeLog,v 1.8 2007/05/06 07:41:31 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  ant-jmf-1.7.0.ebuild:
+  ppc stable
 
   05 May 2007; Andrej Kacian <ticho@gentoo.org> ant-jmf-1.7.0.ebuild:
   Stable on x86, bug #176856.
