--- a/dev-java/ant-apache-resolver/ChangeLog
+++ b/dev-java/ant-apache-resolver/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/ant-apache-resolver
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-apache-resolver/ChangeLog,v 1.7 2007/05/05 16:47:05 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-apache-resolver/ChangeLog,v 1.8 2007/05/06 07:42:05 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  ant-apache-resolver-1.7.0.ebuild:
+  ppc stable
 
   05 May 2007; Andrej Kacian <ticho@gentoo.org>
   ant-apache-resolver-1.7.0.ebuild:
