--- a/dev-java/ant-jsch/ChangeLog
+++ b/dev-java/ant-jsch/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/ant-jsch
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-jsch/ChangeLog,v 1.10 2007/05/05 16:51:27 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-jsch/ChangeLog,v 1.11 2007/05/06 07:42:40 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  ant-jsch-1.7.0-r1.ebuild:
+  ppc stable
 
   05 May 2007; Andrej Kacian <ticho@gentoo.org> ant-jsch-1.7.0-r1.ebuild:
   Stable on x86, bug #176856.
