--- a/dev-java/ant-tasks/ChangeLog
+++ b/dev-java/ant-tasks/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/ant-tasks
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-tasks/ChangeLog,v 1.64 2007/05/05 16:54:57 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-tasks/ChangeLog,v 1.65 2007/05/06 07:52:15 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  ant-tasks-1.7.0-r2.ebuild:
+  ppc stable
 
   05 May 2007; Andrej Kacian <ticho@gentoo.org> ant-tasks-1.7.0-r2.ebuild:
   Stable on x86, bug #176856.
