--- a/dev-java/avalon-framework/ChangeLog
+++ b/dev-java/avalon-framework/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/avalon-framework
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/avalon-framework/ChangeLog,v 1.14 2007/02/13 19:46:46 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/avalon-framework/ChangeLog,v 1.15 2007/05/06 07:52:51 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  avalon-framework-4.1.5.ebuild:
+  ppc stable
 
   13 Feb 2007; Petteri Räty <betelgeuse@gentoo.org>
   avalon-framework-4.1.5-r1.ebuild:
