--- a/dev-java/commons-httpclient/ChangeLog
+++ b/dev-java/commons-httpclient/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/commons-httpclient
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-httpclient/ChangeLog,v 1.42 2007/05/02 10:57:16 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-httpclient/ChangeLog,v 1.43 2007/05/06 07:53:28 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  commons-httpclient-2.0.2-r1.ebuild:
+  ppc stable
 
   02 May 2007; Raúl Porcel <armin76@gentoo.org>
   commons-httpclient-2.0.2-r1.ebuild:
