--- a/dev-java/jakarta-regexp/ChangeLog
+++ b/dev-java/jakarta-regexp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jakarta-regexp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jakarta-regexp/ChangeLog,v 1.24 2007/05/03 19:57:16 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jakarta-regexp/ChangeLog,v 1.25 2007/05/06 07:54:02 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  jakarta-regexp-1.4-r1.ebuild:
+  ppc stable
 
   03 May 2007; Markus Rothe <corsair@gentoo.org>
   jakarta-regexp-1.4-r1.ebuild:
