--- a/dev-java/java-sdk-docs/ChangeLog
+++ b/dev-java/java-sdk-docs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/java-sdk-docs
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/java-sdk-docs/ChangeLog,v 1.47 2007/05/03 20:21:11 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/java-sdk-docs/ChangeLog,v 1.48 2007/05/06 07:54:36 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  java-sdk-docs-1.5.0-r1.ebuild:
+  ppc stable
 
   03 May 2007; Raúl Porcel <armin76@gentoo.org> java-sdk-docs-1.4.2.ebuild:
   ia64 + x86 stable wrt bug 176934
