--- a/dev-java/jdbc-mysql/ChangeLog
+++ b/dev-java/jdbc-mysql/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jdbc-mysql
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc-mysql/ChangeLog,v 1.39 2007/04/26 12:13:20 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc-mysql/ChangeLog,v 1.40 2007/05/06 07:55:11 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  jdbc-mysql-3.1.13-r4.ebuild:
+  ppc stable
 
   26 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
   jdbc-mysql-3.1.13-r4.ebuild:
