--- a/dev-java/jdbc2-stdext/ChangeLog
+++ b/dev-java/jdbc2-stdext/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jdbc2-stdext
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc2-stdext/ChangeLog,v 1.13 2007/01/11 13:45:09 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc2-stdext/ChangeLog,v 1.14 2007/05/06 07:55:45 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  jdbc2-stdext-2.0-r2.ebuild:
+  ppc stable
 
   11 Jan 2007; Markus Rothe <corsair@gentoo.org> jdbc2-stdext-2.0-r2.ebuild:
   Stable on ppc64
