--- a/dev-java/jdom/ChangeLog
+++ b/dev-java/jdom/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jdom
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jdom/ChangeLog,v 1.44 2007/01/30 10:46:41 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jdom/ChangeLog,v 1.45 2007/05/06 07:56:21 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  jdom-1.0_beta10-r3.ebuild:
+  ppc stable
 
   30 Jan 2007; Vlastimil Babka <caster@gentoo.org> -jdom-1.0_beta6.ebuild,
   -jdom-1.0_beta6-r1.ebuild, -jdom-1.0.ebuild, -jdom-1.0-r1.ebuild:
