--- a/dev-java/kunststoff/ChangeLog
+++ b/dev-java/kunststoff/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/kunststoff
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/kunststoff/ChangeLog,v 1.7 2007/01/11 13:57:22 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/kunststoff/ChangeLog,v 1.8 2007/05/06 07:56:56 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  kunststoff-2.0.2-r1.ebuild:
+  ppc stable
 
   11 Jan 2007; Markus Rothe <corsair@gentoo.org> kunststoff-2.0.2-r1.ebuild:
   Stable on ppc64
