--- a/net-dialup/mgetty/ChangeLog
+++ b/net-dialup/mgetty/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/mgetty
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/mgetty/ChangeLog,v 1.72 2007/04/15 09:12:02 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/mgetty/ChangeLog,v 1.73 2007/05/06 07:57:44 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> mgetty-1.1.35-r2.ebuild:
+  Replacing einfo with elog
 
   15 Apr 2007; Alin Năstac <mrness@gentoo.org>
   files/mgetty-1.1.35-gentoo.patch,
