--- a/dev-java/xerces/ChangeLog
+++ b/dev-java/xerces/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/xerces
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/xerces/ChangeLog,v 1.82 2007/04/16 08:14:58 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/xerces/ChangeLog,v 1.83 2007/05/06 07:58:42 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  xerces-2.3.0-r1.ebuild:
+  ppc stable
 
   16 Apr 2007; Vlastimil Babka <caster@gentoo.org> xerces-2.8.1.ebuild:
   Put WANT_SPLIT_ANT back with explanation comment.
