--- a/dev-java/sun-jai-bin/ChangeLog
+++ b/dev-java/sun-jai-bin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/sun-jai-bin
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jai-bin/ChangeLog,v 1.12 2007/05/03 20:03:29 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jai-bin/ChangeLog,v 1.13 2007/05/06 07:59:19 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  sun-jai-bin-1.1.3.ebuild:
+  ppc stable
 
   03 May 2007; Markus Rothe <corsair@gentoo.org> sun-jai-bin-1.1.3.ebuild:
   Stable on ppc64; bug #176856
