--- a/net-dialup/misdn/ChangeLog
+++ b/net-dialup/misdn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/misdn
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/misdn/ChangeLog,v 1.20 2007/04/12 12:06:36 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/misdn/ChangeLog,v 1.21 2007/05/06 07:59:43 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> misdn-1.1.2.ebuild:
+  Replacing einfo with elog
 
 *misdn-1.1.2 (12 Apr 2007)
 
