--- a/net-dialup/penggy/ChangeLog
+++ b/net-dialup/penggy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/penggy
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/penggy/ChangeLog,v 1.12 2007/04/28 16:43:32 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/penggy/ChangeLog,v 1.13 2007/05/06 08:00:52 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> penggy-0.2.1.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org> penggy-0.2.1.ebuild:
   Fix *initd, *confd and *envd calls (#17388, #174266)
