--- a/net-dialup/ppp/ChangeLog
+++ b/net-dialup/ppp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/ppp
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.178 2007/04/28 16:45:43 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.179 2007/05/06 08:03:29 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> ppp-2.4.4-r4.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org> ppp-2.4.4-r4.ebuild:
   Drop dodir from dodir/*into combination.
