--- a/net-dialup/pppoed/ChangeLog
+++ b/net-dialup/pppoed/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/pppoed
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/pppoed/ChangeLog,v 1.13 2006/03/12 21:23:35 mrness Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/pppoed/ChangeLog,v 1.14 2007/05/06 08:06:19 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> pppoed-0.49.ebuild:
+  Replacing einfo with ewarn
 
   12 Mar 2006; Alin Nastac <mrness@gentoo.org> pppoed-0.49.ebuild:
   Remove virtual/libc dependency. Quote $FILESDIR and $D.
