--- a/net-dialup/qlcr/ChangeLog
+++ b/net-dialup/qlcr/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/qlcr
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/qlcr/ChangeLog,v 1.7 2006/09/23 14:41:00 mrness Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/qlcr/ChangeLog,v 1.8 2007/05/06 08:07:59 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> qlcr-0.4.1.ebuild:
+  Replacing einfo with elog
 
   23 Sep 2006; Alin Nastac <mrness@gentoo.org> qlcr-0.4.1.ebuild:
   Avoid QA warning about pre-compressed files.
