--- a/net-dialup/rp-pppoe/ChangeLog
+++ b/net-dialup/rp-pppoe/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/rp-pppoe
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/rp-pppoe/ChangeLog,v 1.87 2007/04/14 07:45:33 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/rp-pppoe/ChangeLog,v 1.88 2007/05/06 08:11:04 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> rp-pppoe-3.8-r1.ebuild:
+  Replacing einfo with elog
 
 *rp-pppoe-3.8-r1 (14 Apr 2007)
 
