--- a/net-dialup/slmodem/ChangeLog
+++ b/net-dialup/slmodem/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dialup/slmodem
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/slmodem/ChangeLog,v 1.81 2007/03/14 21:31:47 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/slmodem/ChangeLog,v 1.82 2007/05/06 08:12:57 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org>
+  slmodem-2.9.11_pre20061021-r2.ebuild:
+  Replacing einfo with elog
 
 *slmodem-2.9.11_pre20061021-r2 (14 Mar 2007)
 
