--- a/net-dialup/tkvoice/ChangeLog
+++ b/net-dialup/tkvoice/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/tkvoice
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/tkvoice/ChangeLog,v 1.1 2006/04/02 07:11:32 mrness Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/tkvoice/ChangeLog,v 1.2 2007/05/06 08:16:05 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> tkvoice-1.5.ebuild:
+  Replacing einfo with elog
 
 *tkvoice-1.5 (02 Apr 2006)
 
