--- a/net-dialup/wvdial/ChangeLog
+++ b/net-dialup/wvdial/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/wvdial
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/wvdial/ChangeLog,v 1.42 2006/11/11 16:45:14 mrness Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/wvdial/ChangeLog,v 1.43 2007/05/06 08:17:10 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> wvdial-1.56.ebuild:
+  Replacing einfo with elog
 
   11 Nov 2006; Alin Nastac <mrness@gentoo.org>
   -files/wvdial-1.54.0-destdir.patch, -wvdial-1.54.0-r1.ebuild:
