--- a/net-dns/avahi/ChangeLog
+++ b/net-dns/avahi/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/avahi
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.100 2007/04/28 12:48:09 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.101 2007/05/06 08:22:11 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> avahi-0.6.16-r1.ebuild,
+  avahi-0.6.17.ebuild, avahi-0.6.18.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Carsten Lohrke <carlo@gentoo.org> avahi-0.6.18.ebuild:
   Block mDNSResponder, both because of the header installed with
