--- a/sys-apps/findutils/ChangeLog
+++ b/sys-apps/findutils/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/findutils
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/findutils/ChangeLog,v 1.98 2007/05/05 06:06:21 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/findutils/ChangeLog,v 1.99 2007/05/06 08:30:47 vapier Exp $
+
+*findutils-4.3.4 (06 May 2007)
+
+  06 May 2007; Mike Frysinger <vapier@gentoo.org> +findutils-4.3.4.ebuild:
+  Version bump #177148.
 
 *findutils-4.3.3 (05 May 2007)
 *findutils-4.2.30 (05 May 2007)
