--- a/net-dns/bind/ChangeLog
+++ b/net-dns/bind/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-dns/bind
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.160 2007/05/01 13:23:45 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.161 2007/05/06 08:50:30 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> bind-9.2.6.ebuild,
+  bind-9.2.6-r3.ebuild, bind-9.2.6-r4.ebuild, bind-9.2.6-r5.ebuild,
+  bind-9.2.7.ebuild, bind-9.2.8.ebuild, bind-9.2.8-r2.ebuild,
+  bind-9.3.2.ebuild, bind-9.3.2-r3.ebuild, bind-9.3.2-r4.ebuild,
+  bind-9.3.2-r5.ebuild, bind-9.3.3.ebuild, bind-9.3.4.ebuild,
+  bind-9.3.4-r2.ebuild, bind-9.4.1.ebuild:
+  Replacing einfo with elog/ewarn.
 
 *bind-9.4.1 (01 May 2007)
 
