--- a/net-dns/djbdns/ChangeLog
+++ b/net-dns/djbdns/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/djbdns
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/djbdns/ChangeLog,v 1.89 2007/01/28 21:57:29 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/djbdns/ChangeLog,v 1.90 2007/05/06 08:55:35 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> djbdns-1.05-r17.ebuild,
+  djbdns-1.05-r19.ebuild, djbdns-1.05-r21.ebuild:
+  Replacing einfo with elog
 
   28 Jan 2007; Michael Hanselmann <hansmi@gentoo.org>
   djbdns-1.05-r21.ebuild:
