--- a/net-dns/ldapdns/ChangeLog
+++ b/net-dns/ldapdns/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/ldapdns
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/ldapdns/ChangeLog,v 1.18 2007/02/22 02:03:04 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/ldapdns/ChangeLog,v 1.19 2007/05/06 08:56:52 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> ldapdns-2.04.ebuild,
+  ldapdns-2.05.ebuild, ldapdns-2.06.ebuild:
+  Replacing einfo with elog
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
