--- a/net-dns/mydns/ChangeLog
+++ b/net-dns/mydns/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/mydns
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/mydns/ChangeLog,v 1.27 2007/05/02 16:22:03 yoswink Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/mydns/ChangeLog,v 1.28 2007/05/06 08:58:26 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> mydns-1.1.0.ebuild,
+  mydns-1.1.0-r1.ebuild:
+  Replacing einfo with elog
 
   02 May 2007; Jose Luis Rivero <yoswink@gentoo.org> mydns-1.1.0-r1.ebuild:
   Stable on alpha wrt security #176130
