--- a/net-dns/noip-updater/ChangeLog
+++ b/net-dns/noip-updater/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-dns/noip-updater
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/noip-updater/ChangeLog,v 1.21 2007/04/28 16:31:49 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/noip-updater/ChangeLog,v 1.22 2007/05/06 09:13:37 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org>
+  noip-updater-2.1.1-r1.ebuild, noip-updater-2.1.3.ebuild,
+  noip-updater-2.1.4.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org>
   noip-updater-2.1.1-r1.ebuild, noip-updater-2.1.3.ebuild,
