--- a/net-dns/pdns/ChangeLog
+++ b/net-dns/pdns/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/pdns
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns/ChangeLog,v 1.43 2007/04/26 22:38:17 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/pdns/ChangeLog,v 1.44 2007/05/06 09:16:12 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> pdns-2.9.20-r1.ebuild,
+  pdns-2.9.20-r2.ebuild, pdns-2.9.21.ebuild:
+  Replacing einfo with elog
 
   26 Apr 2007; Sven Wegener <swegener@gentoo.org> pdns-2.9.21.ebuild:
   Add sqlite3 backend.
