--- a/net-dns/pdnsd/ChangeLog
+++ b/net-dns/pdnsd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/pdnsd
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/pdnsd/ChangeLog,v 1.70 2007/04/22 18:17:57 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/pdnsd/ChangeLog,v 1.71 2007/05/06 09:18:17 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> pdnsd-1.2.4-r1.ebuild,
+  pdnsd-1.2.4-r3.ebuild, pdnsd-1.2.5.ebuild:
+  Replacing einfo with elog
 
   22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> pdnsd-1.2.5.ebuild:
   ppc stable, bug #174559
