--- a/net-dns/posadis/ChangeLog
+++ b/net-dns/posadis/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/posadis
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/posadis/ChangeLog,v 1.20 2007/04/29 18:17:06 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/posadis/ChangeLog,v 1.21 2007/05/06 09:20:05 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> posadis-0.60.6.ebuild:
+  Replacing einfo with ewarn
 
   29 Apr 2007; Torsten Veller <tove@gentoo.org> posadis-0.60.6.ebuild:
   Fix *initd, *confd and *envd calls (#173884, #174266)
