--- a/net-dns/resolvconf-gentoo/ChangeLog
+++ b/net-dns/resolvconf-gentoo/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-dns/resolvconf-gentoo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/resolvconf-gentoo/ChangeLog,v 1.26 2007/04/09 20:15:36 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/resolvconf-gentoo/ChangeLog,v 1.27 2007/05/06 09:23:21 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org>
+  resolvconf-gentoo-1.0.ebuild, resolvconf-gentoo-1.1.ebuild,
+  resolvconf-gentoo-1.2.ebuild, resolvconf-gentoo-1.3.ebuild:
+  Replacing einfo with elog
 
 *resolvconf-gentoo-1.3 (09 Apr 2007)
 
