--- a/net-dns/totd/ChangeLog
+++ b/net-dns/totd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/totd
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/totd/ChangeLog,v 1.5 2007/04/28 17:22:35 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/totd/ChangeLog,v 1.6 2007/05/06 09:24:36 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> totd-1.3.ebuild,
+  totd-1.5.ebuild, totd-1.5.1.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org> totd-1.3.ebuild,
   totd-1.5.ebuild, totd-1.5.1.ebuild:
