--- a/net-analyzer/authforce/ChangeLog
+++ b/net-analyzer/authforce/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/authforce
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/authforce/ChangeLog,v 1.8 2007/04/17 11:19:59 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/authforce/ChangeLog,v 1.9 2007/05/06 09:32:25 dragonheart Exp $
+
+  06 May 2007; Daniel Black <dragonheart@gentoo.org> ChangeLog:
+  fixed broken authforce ebuild. Appoligies to cygeus (and all others) as per
+  bug #176947
 
 *authforce-0.9.8 (17 Apr 2007)
 
