--- a/net-firewall/firehol/ChangeLog
+++ b/net-firewall/firehol/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-firewall/firehol
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/firehol/ChangeLog,v 1.28 2007/05/05 12:10:04 centic Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/firehol/ChangeLog,v 1.29 2007/05/06 09:33:05 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> firehol-1.250.ebuild,
+  firehol-1.250-r1.ebuild, firehol-1.250-r2.ebuild:
+  Replacing einfo with elog
 
 *firehol-1.250-r2 (05 May 2007)
 
