--- a/dev-java/jcs/ChangeLog
+++ b/dev-java/jcs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jcs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jcs/ChangeLog,v 1.10 2007/04/27 04:10:31 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jcs/ChangeLog,v 1.11 2007/05/06 09:33:17 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> jcs-1.2.7.9.ebuild:
+  ppc stable, bug #176079
 
   27 Apr 2007; William L. Thomson Jr. <wltjr@gentoo.org> jcs-1.2.7.9.ebuild:
   Stable on amd64, bug #176079.
