--- a/net-firewall/firestarter/ChangeLog
+++ b/net-firewall/firestarter/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/firestarter
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/firestarter/ChangeLog,v 1.29 2007/02/09 04:12:27 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/firestarter/ChangeLog,v 1.30 2007/05/06 09:39:49 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> firestarter-1.0.3.ebuild:
+  Replacing einfo with elog
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
