--- a/net-firewall/fwbuilder/ChangeLog
+++ b/net-firewall/fwbuilder/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-firewall/fwbuilder
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/fwbuilder/ChangeLog,v 1.61 2007/04/01 20:15:36 anant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/fwbuilder/ChangeLog,v 1.62 2007/05/06 09:41:08 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> fwbuilder-2.0.12.ebuild,
+  fwbuilder-2.1.10.ebuild:
+  Replacing einfo with elog
 
 *fwbuilder-2.1.10 (01 Apr 2007)
 
