--- a/net-firewall/fwipsec/ChangeLog
+++ b/net-firewall/fwipsec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/fwipsec
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/fwipsec/ChangeLog,v 1.9 2007/03/19 13:12:49 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/fwipsec/ChangeLog,v 1.10 2007/05/06 09:44:06 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> fwipsec-0.4.2-r1.ebuild:
+  Replacing einfo with elog
 
   19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
   Remove pfeifer from metadata.xml due to retirement.
