--- a/net-firewall/iptables/ChangeLog
+++ b/net-firewall/iptables/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-firewall/iptables
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/iptables/ChangeLog,v 1.131 2007/04/08 17:51:44 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/iptables/ChangeLog,v 1.132 2007/05/06 09:54:40 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> iptables-1.3.5-r4.ebuild,
+  iptables-1.3.6.ebuild, iptables-1.3.6-r1.ebuild, iptables-1.3.7.ebuild:
+  Replacing einfo with elog/ewarn
 
   08 Apr 2007; Mike Frysinger <vapier@gentoo.org>
   +files/iptables-1.3.7-kernel-dir.patch, iptables-1.3.7.ebuild:
