--- a/net-firewall/kmyfirewall/ChangeLog
+++ b/net-firewall/kmyfirewall/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/kmyfirewall
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/kmyfirewall/ChangeLog,v 1.31 2007/04/18 10:30:02 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/kmyfirewall/ChangeLog,v 1.32 2007/05/06 09:56:45 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> kmyfirewall-1.0.1-r1.ebuild:
+  Replacing einfo with elog
 
 *kmyfirewall-1.0.1-r1 (18 Apr 2007)
 
