--- a/net-firewall/lutelwall/ChangeLog
+++ b/net-firewall/lutelwall/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/lutelwall
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/lutelwall/ChangeLog,v 1.15 2007/04/28 21:40:47 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/lutelwall/ChangeLog,v 1.16 2007/05/06 09:57:47 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> lutelwall-0.99.ebuild:
+  Replacing einfo with elog
 
   28 Apr 2007; Torsten Veller <tove@gentoo.org> lutelwall-0.99.ebuild:
   Fix *initd, *confd and *envd calls (#173884, #174266)
