--- a/net-fs/autofs/ChangeLog
+++ b/net-fs/autofs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-fs/autofs
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/ChangeLog,v 1.62 2007/04/29 17:39:43 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/autofs/ChangeLog,v 1.63 2007/05/06 10:07:34 genone Exp $
+
+  06 May 2007; Marius Mauch <genone@gentoo.org> autofs-3.1.7-r4.ebuild,
+  autofs-3.1.7-r5.ebuild, autofs-3.1.7-r6.ebuild, autofs-4.0.0.ebuild,
+  autofs-4.1.3.ebuild, autofs-4.1.3-r1.ebuild, autofs-4.1.3-r2.ebuild,
+  autofs-4.1.3-r3.ebuild, autofs-4.1.3-r4.ebuild, autofs-4.1.3-r7.ebuild:
+  Replacing einfo with elog
 
   29 Apr 2007; Torsten Veller <tove@gentoo.org> autofs-4.1.3-r7.ebuild:
   Fix *initd, *confd and *envd calls (#173884, #174266)
