--- a/app-emulation/bochs/ChangeLog
+++ b/app-emulation/bochs/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/bochs
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/bochs/ChangeLog,v 1.63 2007/05/02 17:39:55 yoswink Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/bochs/ChangeLog,v 1.64 2007/05/06 10:09:50 leio Exp $
+
+  06 May 2007; Mart Raudsepp <leio@gentoo.org>
+  -files/bochs-2.1.1-regparm-typo.patch, -bochs-2.1.1.ebuild,
+  -bochs-2.2.5.ebuild, -bochs-2.2.5-r1.ebuild:
+  Remove old versions
 
   02 May 2007; Jose Luis Rivero <yoswink@gentoo.org> bochs-2.2.6.ebuild:
   Stable on alpha wrt bug #146954
